RESOLVED FIXED90168
[GTK] [WK2] Memory leak in ResourceHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=90168
Summary [GTK] [WK2] Memory leak in ResourceHandleSoup.cpp
Sudarsana Nagineni (babu)
Reported 2012-06-28 06:24:20 PDT
==11611== 160 bytes in 10 blocks are definitely lost in loss record 18,502 of 25,443 ==11611== at 0x4C29DB4: calloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==11611== by 0x10603AA0: g_malloc0 (gmem.c:189) ==11611== by 0x105FE2A9: g_main_loop_new (gmain.c:3212) ==11611== by 0x6CF4942: WebCore::WebCoreSynchronousLoader::WebCoreSynchronousLoader(WebCore::ResourceError&, WebCore::ResourceResponse&, _SoupSession*, WTF::Vector<char, 0ul>&) (ResourceHandleSoup.cpp:92) ==11611== by 0x6CF3F03: WebCore::ResourceHandle::loadResourceSynchronously(WebCore::NetworkingContext*, WebCore::ResourceRequest const&, WebCore::StoredCredentials, WebCore::ResourceError&, WebCore::ResourceResponse&, WTF::Vector<char, 0ul>&) (ResourceHandleSoup.cpp:808) ==11611== by 0x6B0B70A: WebCore::FrameLoader::loadResourceSynchronously(WebCore::ResourceRequest const&, WebCore::StoredCredentials, WebCore::ResourceError&, WebCore::ResourceResponse&, WTF::Vector<char, 0ul>&) (FrameLoader.cpp:2521) ==11611== by 0x6AF9F6E: WebCore::DocumentThreadableLoader::loadRequest(WebCore::ResourceRequest const&, WebCore::SecurityCheckPolicy) (DocumentThreadableLoader.cpp:398) ==11611== by 0x6AF7F25: WebCore::DocumentThreadableLoader::DocumentThreadableLoader(WebCore::Document*, WebCore::ThreadableLoaderClient*, WebCore::DocumentThreadableLoader::BlockingBehavior, WebCore::ResourceRequest const&, WebCore::ThreadableLoaderOptions const&) (DocumentThreadableLoader.cpp:89) ==11611== by 0x6AF7B29: WebCore::DocumentThreadableLoader::loadResourceSynchronously(WebCore::Document*, WebCore::ResourceRequest const&, WebCore::ThreadableLoaderClient&, WebCore::ThreadableLoaderOptions const&) (DocumentThreadableLoader.cpp:60) ==11611== by 0x6B564AC: WebCore::ThreadableLoader::loadResourceSynchronously(WebCore::ScriptExecutionContext*, WebCore::ResourceRequest const&, WebCore::ThreadableLoaderClient&, WebCore::ThreadableLoaderOptions const&) (ThreadableLoader.cpp:69) ==11611== by 0x712B865: WebCore::XMLHttpRequest::createRequest(int&) (XMLHttpRequest.cpp:732) ==11611== by 0x712AD0C: WebCore::XMLHttpRequest::send(WTF::String const&, int&) (XMLHttpRequest.cpp:601) ==11611== by 0x712A732: WebCore::XMLHttpRequest::send(int&) (XMLHttpRequest.cpp:541) ==11611== by 0x65068C2: WebCore::JSXMLHttpRequest::send(JSC::ExecState*) (JSXMLHttpRequestCustom.cpp:120) ==11611== by 0x7575AC2: WebCore::jsXMLHttpRequestPrototypeFunctionSend(JSC::ExecState*) (JSXMLHttpRequest.cpp:568)
Attachments
Patch (1.56 KB, patch)
2012-06-28 06:45 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-06-28 06:45:43 PDT
Created attachment 149940 [details] Patch Fixed a memory leak.
WebKit Review Bot
Comment 2 2012-06-28 09:43:39 PDT
Comment on attachment 149940 [details] Patch Clearing flags on attachment: 149940 Committed r121437: <http://trac.webkit.org/changeset/121437>
WebKit Review Bot
Comment 3 2012-06-28 09:43:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.