[GTK] [WK2] Memory leak in ResourceHandleSoup.cpp https://bugs.webkit.org/show_bug.cgi?id=90168

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-28
Reviewed by Martin Robinson.

Fixed a memory leak in WebCoreSynchronousLoader by using adoptGRef
instead of just getting new reference of GMainLoop.

No new tests. No change in behavior.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::WebCoreSynchronousLoader::WebCoreSynchronousLoader):

Canonical link: https://commits.webkit.org/108005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121437 268f45cc-cd09-0410-ab3c-d52691b4dbfc